--- a/MP3.ipynb
+++ b/MP3.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MPEG Audio Layer 3"
+    "# MPEG Audio Layer 3\n",
+    "\n",
+    "* Perceptual coders are based on a\n",
+    "psychoacoustic model and take advantage of the\n",
+    "masking properties of the human auditory system.\n",
+    "\n",
+    "* In contrast to lossless audio coding which is based on removing redundancy, lossy coding techniques make use of removing redundancy and irrelevancy based on perceptual criteria (http://staff.fh-hagenberg.at/schaffer/avt2/Docs/Perceptual_Audio_Coding_Tutorial.pdf). In contrast to a lossless coding system, a lossy\n",
+    "compression schemes not only exploits the statistical\n",
+    "redundancies but also the perceptual irrelevancies of\n",
+    "the signal, as they result from the properties of the\n",
+    "human auditory system. \n",
+    "\n"
    ]
   },
   {
