--- a/MP3.ipynb
+++ b/MP3.ipynb
@@ -48,7 +48,7 @@
     "### Encoder\n",
     "\n",
     "1. Split $s[n]$ into blocks of $12\\times 32=384$ samples. For each block:\n",
-    "   1. Analyze the block using a 32-band (analysis) filter bank, producing $12$ coeffs/subband (the coeffs are downsampled by $32$).\n",
+    "   1. Analyze the block using a 32-band equally-spaced (analysis) filter bank, producing $12$ coeffs/subband (the coeffs are downsampled (subsampled, decimated) by factor of $32$). $342$ time-domain samples are transformed into $32$ subbands with $12$ coeffs. Notice that in a subband, each coeff can be considered as a sample of such subband.\n",
     "   2. Scale each block of $12$ coeffs to ensure that the entire range of the selected quantizer will be used. Output the *scalefactor*.\n",
     "   3. Using the [FFT](https://en.wikipedia.org/wiki/Fast_Fourier_transform), compute the ATH for the block (considering the masking effects).\n",
     "   4. Let $R^*$ the bit-rate selected by the user. While the generated bit-rate $R\\leq R^*$:\n",
@@ -64,8 +64,28 @@
     "\n",
     "1. For each input frame:\n",
     "   1. \"Dequantize\" the coeffs of each subband.\n",
-    "   2. Re-scale the coeffs to their original dynamic range.\n",
+    "   2. Descale the coeffs to their original dynamic range.\n",
     "   3. Apply the 32-band synthesis filters bank."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loss information analysis\n",
+    "\n",
+    "1. Aliasing in the 32-band analysis filter bank.\n",
+    "\n",
+    "   ```\n",
+    "   ^ Amplitude\n",
+    "   |     _______     _______     ____....__     _______\n",
+    "   |    /       \\   /       \\   /          \\   /       \\\n",
+    "   |   /         \\ /         \\ /            \\ /         \\\n",
+    "   |  / subband 0 X subband 1 X              X  sub. 31  \\\n",
+    "   +-/-----------/-\\---------/-\\-----....---/-\\-----------\\-> frequency\n",
+    "   ```\n",
+    "\n",
+    "2. Quantization."
    ]
   },
   {
@@ -74,6 +94,7 @@
    "source": [
     "## [Layer II](https://en.wikipedia.org/wiki/MPEG-1_Audio_Layer_II)\n",
     "\n",
+    "* Backward compatibile with MP1.\n",
     "* 8:1 compression (174 kbps).\n",
     "* CBR (Constant Bit-Rate).\n",
     "* Increases block-size to $3\\times 12\\times 32=1152$ samples."
@@ -85,17 +106,28 @@
    "source": [
     "## [Layer III](https://en.wikipedia.org/wiki/MP3)\n",
     "\n",
-    "* CBR and ABR (Averate Bit-Rate).\n",
-    "* Typically, 128 kbps.\n",
-    "* Increases block-size to $3\\times 12\\times 32=1152$ samples."
+    "* [\"Rescued\" by Napster](https://www.xataka.com/historia-tecnologica/la-historia-del-mp3-el-formato-que-tras-casi-morir-dos-veces-revoluciono-el-mundo-de-la-musica).\n",
+    "* Backward compatibile with MP1 and MP2.\n",
+    "* CBR and VBR (Variable Bit-Rate). In this last case, users usually select the average bit-rate.\n",
+    "* Typically, virtually lossless at 128 kbps for most human beings.\n",
+    "* Improved subband analysis by means of the MDCT (using 32 subbands, the low-frequency ones contains more than un bark, which generates a poor frequency resolution in the ATH computation)."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### [Encoder](http://home.deib.polimi.it/dossi/fond_tlc/mpeg1layer3.pdf)\n",
+    "\n",
+    "1. Split $s[n]$ into blocks of $36\\times 32=1152$ samples. For each block:\n",
+    "   1. Analyze the block using a 32-band equally-spaced (analysis) filter bank, producing $36$ coeffs/subband.\n",
+    "   2. \n",
+    "   2. Scale each block of $12$ coeffs to ensure that the entire range of the selected quantizer will be used. Output the *scalefactor*.\n",
+    "   3. Using the [FFT](https://en.wikipedia.org/wiki/Fast_Fourier_transform), compute the ATH for the block (considering the masking effects).\n",
+    "   4. Let $R^*$ the bit-rate selected by the user. While the generated bit-rate $R\\leq R^*$:\n",
+    "     1. Decrement the quantization step $\\Delta_b$ for each subband $b$, proportionally to the ATH in $b$. Compute $R$.\n",
+    "   5. Output $\\{\\Delta_b\\}_{b=1}^{32}$ and the quantization indexes."
+   ]
   },
   {
    "cell_type": "markdown",
