--- a/MP3.ipynb
+++ b/MP3.ipynb
@@ -52,7 +52,7 @@
     "   2. Scale each block of $12$ coeffs to ensure that the entire range of the selected quantizer will be used. Output the *scalefactor*.\n",
     "   3. Using the [FFT](https://en.wikipedia.org/wiki/Fast_Fourier_transform), compute the ATH for the block (considering the masking effects).\n",
     "   4. Let $R^*$ the bit-rate selected by the user. While the generated bit-rate $R\\leq R^*$:\n",
-    "     1. Decrement the quantization step $\\Delta_b$ for each subband $b$, proportionally to the ATH in $b$. Compute $R$.\n",
+    "     1. Decrement the quantization step $\\Delta_b$ for each subband $b$, proportionally to the ATH in $b$. Compute $R$. The bit-rate is controlled be switching between quantizers with different number of bits.\n",
     "   5. Output $\\{\\Delta_b\\}_{b=1}^{32}$ and the quantization indexes."
    ]
   },
@@ -120,34 +120,30 @@
     "### [Encoder](http://home.deib.polimi.it/dossi/fond_tlc/mpeg1layer3.pdf)\n",
     "\n",
     "1. Split $s[n]$ into blocks of $36\\times 32=1152$ samples. For each block:\n",
+    "   1. Performs FFT of the block to compute the ATH and windows sequence.\n",
     "   1. Analyze the block using a 32-band equally-spaced (analysis) filter bank, producing $36$ coeffs/subband.\n",
-    "   2. \n",
-    "   2. Scale each block of $12$ coeffs to ensure that the entire range of the selected quantizer will be used. Output the *scalefactor*.\n",
-    "   3. Using the [FFT](https://en.wikipedia.org/wiki/Fast_Fourier_transform), compute the ATH for the block (considering the masking effects).\n",
-    "   4. Let $R^*$ the bit-rate selected by the user. While the generated bit-rate $R\\leq R^*$:\n",
-    "     1. Decrement the quantization step $\\Delta_b$ for each subband $b$, proportionally to the ATH in $b$. Compute $R$.\n",
-    "   5. Output $\\{\\Delta_b\\}_{b=1}^{32}$ and the quantization indexes."
+    "   2. For each subband:\n",
+    "      1.  Analyze transients. If detected, use a sequece of start/short*3/stop windows. Otherwise, use a long window.\n",
+    "      <img src=\"figs/windows.png\" width=800>\n",
+    "      2. Compute [MDCT](https://en.wikipedia.org/wiki/Modified_discrete_cosine_transform). This produces $36$ (long), $30$ (start/stop) or $12$ coeffs/subband (short). This step produces $18$ coeffs/subband (long), $15$ coeffs/subband (start/stop) and $6$ coeffs/subband (short).\n",
+    "      3. Apply scalefactors to optimize quantization.\n",
+    "   3. **Distortion control loop**: keep (as much as possible) the quantization error below the ATH.\n",
+    "      1. **Rate control loop**: Let $R^*$ the bit-rate selected by the user. While the generated bit-rate $R\\leq R^*$:\n",
+    "         1. Decrement the quantization step $\\Delta_b$ for each subband $b$, proportionally to the ATH in $b$. Compute $R$ after encoding the quantizer indexes with (static) Huffman coding. As in previous layers, a quantizer is selected from a list of predefined logaritmic quantizers."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{itemize}\n",
-    "\\item Developed by the MPEG Audio group (Fraunhofer IIS, University of\n",
-    "  Hannover, AT\\&T-Bell Labs, Thomson-Brandt and CCETT (Centre Commun\n",
-    "  d'\\'Etudes de T\\'el\\'evision et T\\'el\\'ecommunications)) in 1992.\n",
-    "\\item Used in MP3 players, DVDs, etc.\n",
-    "\\item Encoding algorithm:\n",
-    "  \\begin{enumerate}\n",
-    "  \\item Split the original PCM sequence into 32 PCM sequences, each\n",
-    "    one for a specific frequency subband (subband coding).\n",
-    "  \\item Transform each subband using the MDCT.\n",
-    "  \\item Determine the quantization values for each subband using a\n",
-    "    psycho-acoustic model.\n",
-    "  \\item Lossless compress each MDCT subband sequence using Huffman coding.\n",
-    "\\end{enumerate}\n",
-    "\\end{itemize}\n"
+    "### Decoder\n",
+    "\n",
+    "1. For each input frame:\n",
+    "   1. Decode the Huffman codes.\n",
+    "   2. \"Dequantize\" the coeffs of each subband.\n",
+    "   3. Descale the coeffs to their original dynamic range.\n",
+    "   4. Apply inverse MDCT.\n",
+    "   5. Apply the 32-band synthesis filters bank."
    ]
   }
  ],
