--- a/index.ipynb
+++ b/index.ipynb
@@ -124,7 +124,7 @@
     "   1. Analyze the block using a 32-band equally-spaced (analysis) filter bank, producing $36$ coeffs/subband.\n",
     "   2. For each subband:\n",
     "      1.  Analyze transients. If detected, use a sequece of start/short*3/stop windows. Otherwise, use a long window.\n",
-    "      <img src=\"figs/windows.png\" width=800>\n",
+    "      <img src=\"data/windows.png\" width=800>\n",
     "      2. Compute [MDCT](https://en.wikipedia.org/wiki/Modified_discrete_cosine_transform). This produces $36$ (long), $30$ (start/stop) or $12$ coeffs/subband (short). This step produces $18$ coeffs/subband (long), $15$ coeffs/subband (start/stop) and $6$ coeffs/subband (short).\n",
     "      3. Apply scalefactors to optimize quantization.\n",
     "   3. **Distortion control loop**: keep (as much as possible) the quantization error below the ATH.\n",
